# Thumbgen

./: .gitignore  CMakeLists.txt  README.md  Thumbgen.bpr  main.cpp  main.dfm  main.h
docs/: Doxyfile
form/: main.dfm  main.h
include/: image_filter.h  thumbnail_engine.h  thumbnail_path.h
src/: image_filter.cpp  main.cpp  thumbnail_engine.cpp  thumbnail_path.cpp
tests/: test_image_filter.cpp  test_thumbnail_path.cpp
